--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ max-imports = 15
 exclude = .git,__pycache__,.venv,.eggs,*.egg,frontend,landing
 
 # Disable some pydocstyle checks:
-ignore = D100, D104, D106, D401, X100, W504, RST303, RST304, DAR103, DAR203
+ignore = D100, D104, D106, D401, X100, W504, RST303, RST304, DAR103, DAR203, WPS453
 
 # Docs: https://github.com/snoack/flake8-per-file-ignores
 # You can completely or partially disable our custom checks,
@@ -37,7 +37,7 @@ per-file-ignores =
   # Allow `__init__.py` with logic for configuration:
   server/settings/*.py: WPS226, WPS407, WPS412, WPS432
   # Allow to have magic numbers and wrong module names inside migrations:
-  server/*/migrations/*.py: WPS102, WPS114, WPS432
+  server/*/migrations/*.py: WPS102, WPS114, WPS432, D100
   # Tests have some more freedom:
   tests/*.py: S101, WPS201, WPS202, WPS218, WPS226, WPS436, WPS442
 
@@ -61,7 +61,7 @@ DJANGO_SETTINGS_MODULE = server.settings
 # You should adjust this value to be as low as possible.
 # Configuration:
 # https://pypi.org/project/pytest-timeout/
-timeout = 5
+timeout = 30
 
 # Strict `@xfail` by default:
 xfail_strict = true
