env for json server

--- a/config/.env.template
+++ b/config/.env.template
@@ -48,3 +48,7 @@ DJANGO_PLACEHOLDER_API_TIMEOUT=5
 # We use this email to support HTTPS, certificate will be issued on this owner:
 # See: https://caddyserver.com/docs/caddyfile/directives/tls
 TLS_EMAIL=webmaster@myapp.com
+
+# === JSON server ===
+JSON_SERVER_HOST=localhost
+JSON_SERVER_PORT=3000
